<resources>
    <string name="app_name" translatable="false">Tasty</string>
    <string name="title_favorites">favorites</string>
    <string name="title_categories">categories</string>
    <string name="btn_categories_description">open categories of dishes</string>
    <string name="btn_favorites_description">open favorite dishes</string>
    <string name="category_of_dish_description">Image of category of dish.</string>
    <string name="categories_image">Image for categories page title.</string>
    <string name="recipe_image">Image of recipe.</string>
    <string name="recipe_category_image">Recipe category image.</string>
    <string name="ingredients_title">ingredients</string>
    <string name="method_title">method</string>
    <string name="servings_title">Servings:</string>
    <string name="servings_number_default">1</string>
</resources>