<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="@dimen/paddingMain"
        android:paddingVertical="@dimen/halfOfPaddingMain"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnCategory"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/btnLayoutMarginEnd"
            android:paddingVertical="@dimen/btnPaddingVertical"
            style="@style/StyleNavButton"
            android:backgroundTint="@color/btn_category_color"
            android:text="@string/title_categories"
            android:contentDescription="@string/btn_categories_description"/>

        <Button
            android:id="@+id/btnFavorites"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/btnLayoutMarginEnd"
            android:paddingVertical="@dimen/btnPaddingVertical"
            style="@style/StyleNavButton"
            android:backgroundTint="@color/btn_favorites_color"
            android:text="@string/title_favorites"
            app:icon="@drawable/ic_heart_empty"
            app:iconGravity="textEnd"
            android:contentDescription="@string/btn_favorites_description"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>