<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RecipeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <ImageView
            android:id="@+id/imRecipeImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRecipeTitle"
            style="@style/StyleTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_main"
            android:gravity="bottom|start"
            android:padding="@dimen/title_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Название рецепта очень длинное" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_marginTop="@dimen/padding_main"
            android:layout_marginStart="@dimen/padding_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_title"
            style="@style/StyleTitleTextView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_main"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_ingredient"/>

        <TextView
            android:layout_marginTop="@dimen/padding_main"
            android:layout_marginStart="@dimen/padding_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/method_title"
            style="@style/StyleTitleTextView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_main"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_method"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
